# WaveguideModalBPM1D

./: .gitignore  README.md  WaveguideModalBPM1D.code-workspace  pyproject.toml
.github/workflows/: ci.yml
WaveguideModalBPM1D/: __init__.py  analyzer.py  bpm_tridiagonal.py  constants.py  coupling_sweep.py  modal.py  parameters.py  test_cases.py  workflows.py
examples/: 01_modal_api_profile_and_modes.py  02_modal_api_neff_dispersion.py  03_workflow_multilayer_modes.py  04_workflow_dispersion_with_angle_axis.py  05_straight_bpm_fundamental_heatmap.py  06_straight_bpm_input_output_profiles.py  07_parallel_coupler_heatmap.py  08_parallel_coupler_profiles.py  09_parallel_coupler_power.py  10_coupler_heatmap.py  11_coupler_port_power.py  12_coupler_input_output_profiles.py  13_coupler_power_and_profiles.py  14_coupler_spectral_response.py  15_sweep_parameter_to_lc.py  16_sweep_parameter_lc.py  17_sweep_parameter_peak_transfer.py  18_sweep_gap_to_lc_coupler.py  19_sweep_gap_to_peak_transfer_coupler.py  20_sweep_gap_parallel_lc_combo.py  21_sweep_gap_parallel_lc_curve.py  22_sweep_gap_parallel_peak_transfer.py  example_parameters.py  figure_helpers.py  generate_figures.py
tests/: test_package.py
