[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "WaveguideModalBPM1D"
version = "1.0.0"
description = "Tools for 1D modal analysis and BPM simulations of optical waveguides and couplers."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "AGPL-3.0-only"}
authors = [
  { name = "Alan Franco" },
]
dependencies = [
  "joblib>=1.3",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
accel = [
  "numba>=0.59",
]

[tool.setuptools.packages.find]
include = ["WaveguideModalBPM1D*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
